# ghost-blogger-repo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: agent_api.yml  ghost_blogger.yml  ghost_daily_cycle.yml  ghost_weekly_reflect.yml  pages.yml
ghost_blogger_agent/: POLICY.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
ghost_blogger_agent/data/: state.json
ghost_blogger_agent/src/ghost_blogger/: __main__.py  agent.py  analyst.py  cli.py  config.py  dedupe.py  extract.py  improver.py  net.py  reflector.py  runner.py  sources.py  state.py  summarize.py  telemetry.py  validation.py  write_post.py
ghost_blogger_agent/src/ghost_blogger/llm/: __init__.py  base.py  template.py  tiny_char_gpt.py
ghost_blogger_agent/tests/: test_dedupe.py  test_extract.py  test_net.py  test_validation.py  test_write_post.py
knowjoby-blog/: _config.yml  about.md  agents.md  archives.md  how-it-works.md  index.md  insights.md  llms.txt  map.md  robots.txt  status.md
knowjoby-blog/.well-known/: agent.json
knowjoby-blog/_data/: analysis.json  concepts.json  improvement_log.json  memory.json  runs.json
knowjoby-blog/_includes/: footer.html  head-custom.html  header.html
knowjoby-blog/_layouts/: home.html  page.html
knowjoby-blog/_posts/: 2026-03-12-ghost-notes-2603-10133-agentic-control-center-for-data-product-optimization-1.md  2026-03-12-ghost-notes-2603-10133-agentic-control-center-for-data-product-optimization.md  2026-03-12-ghost-notes-artificial-intelligence-wikipedia-1.md  (+56 more)
knowjoby-blog/api/: status.json  (+3 more)
(+1 files in other folders)
